<resources>
    <string name="app_name">CukCuk Lite</string>
    <string name="name_test">CukCuk Lite</string>
    <string name="email_test">cukcuklite@gmail.com</string>
    <string name="sale_nav">Bán hàng</string>
    <string name="menu_nav">Thực đơn</string>
    <string name="report_nav">Doanh thu</string>
    <string name="title_setting_nav"><medium>Thiết lập</medium></string>
    <string name="sync_nav">Đồng bộ dữ liệu</string>
    <string name="setting_nav">Thiết lập</string>
    <string name="link_acc_nav">Liên kết tài khoản</string>
    <string name="title_help_nav"><medium>Trợ giúp</medium></string>
    <string name="notification_nav">Thông báo</string>
    <string name="share_nav">Giới thiệu cho bạn</string>
    <string name="rate_nav">Đánh giá ứng dụng</string>
    <string name="feedback_nav">Góp ý với nhà phát triển</string>
    <string name="info_nav">Thông tin sản phẩm</string>
    <string name="title_account_nav"><medium>Tài khoản</medium></string>
    <string name="set_pass_nav">Đặt mật khẩu</string>
    <string name="logout_nav">Đăng xuất</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="insert_successful">Thêm thành công</string>
    <string name="insert_fail">Thêm thất bại</string>
    <string name="edit_successful">Chỉnh sửa thành công</string>
    <string name="edit_fail">Chỉnh sửa thất bại</string>
    <string name="remove_successful">Xóa thành công</string>
    <string name="remove_fail">Xóa thất bại</string>
    <string name="price_food">Giá bán:</string>
    <string name="status_food"><small>Ngừng bán</small></string>
    <string name="add_food">Thêm món</string>
    <string name="name_food">Tên món <font color="#FF0000">*</font></string>
    <string name="food_price">Giá bán</string>
    <string name="unit_food">Đơn vị tính <font color="#FF0000">*</font></string>
    <string name="color_food">Màu sắc</string>
    <string name="icon_food">Biểu tượng</string>
    <string name="hint_input_food">Nhập tên món</string>
    <string name="get">Cất</string>
    <string name="hint_unit">Thêm đơn vị tính</string>
    <string name="name_err">Tên món không được để trống</string>
    <string name="unit_err">Đơn vị tính không được để trống</string>
    <string name="add_successfull">Thêm thành công</string>
    <string name="add_fail">Thêm thành công</string>
    <string name="done">Xong</string>
    <string name="default_price">0</string>
    <string name="default_unit">Bao</string>
    <string name="broadcast_update">Update</string>
    <string name="titleStatus">Trạng thái</string>
    <string name="delete">Xóa</string>
    <string name="edit_food">Sửa món</string>
    <string name="title_unit">Đơn vị tính</string>
    <string name="key_c">C</string>
    <string name="key_decre">Giảm</string>
    <string name="key_incre">Tăng</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_sub">-</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_add">+</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_abs">"\u00B1"</string>
    <string name="key_0">0</string>
    <string name="key_000">000</string>
    <string name="key_comma">,</string>
    <string name="key_by">=</string>
    <string name="number_negative">Giá không được âm</string>
    <string name="add_unit">Thêm đơn vị tính</string>
    <string name="edit_unit">Sửa đơn vị tính</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="hint_input_unit">Nhập đơn vị tính</string>
    <string name="unit_duplicate">Đơn vị tính %1$s đã tồn tại</string>
    <string name="broadcast_save_last_unit">LastUnit</string>
    <string name="remove_unit">Xóa đơn vị tính</string>
    <string name="negative_button">Không</string>
    <string name="positive_button">Có</string>
    <string name="remove_message">Bạn có chắc chắn muốn xóa đơn vị tính %1$s không ?</string>
    <string name="default_image">default</string>
</resources>
