<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".edit_food.EditFoodActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main_color"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/tvTitleToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Thực đơn"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_big"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_menu_food"
            android:text="@string/name_food"/>
        <EditText
            android:id="@+id/etNameFood"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_menu_food"
            android:hint="@string/hint_input_food"
            android:textStyle="bold"
            android:inputType="text"
            android:background="@null"
            android:gravity="end"
            android:paddingEnd="@dimen/padding_big"
            android:paddingStart="@dimen/padding_normal"
            android:maxLines="1"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/divider_gray"
        android:layout_height="@dimen/divider_height"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_big"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color_menu_food"
            android:text="@string/food_price"/>
        <TextView
            android:id="@+id/tvPriceFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_price"
            android:textColor="@color/black"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="end"
            android:drawableEnd="@drawable/ic_forward"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/divider_gray"
        android:layout_height="@dimen/divider_height"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_big"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color_menu_food"
            android:text="@string/unit_food"/>
        <TextView
            android:id="@+id/tvUnitFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_unit"
            android:textColor="@color/black"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="end"
            android:drawableEnd="@drawable/ic_forward"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/divider_gray"
        android:layout_height="@dimen/divider_height"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_big"
        android:paddingEnd="@dimen/padding_big"
        android:paddingTop="@dimen/padding_normal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color_menu_food"
            android:text="@string/color_food"/>
        <android.support.v7.widget.CardView
            android:layout_width="@dimen/size_icon_food"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginStart="@dimen/magin_huge"
            app:cardCornerRadius="@dimen/round_corner"
            android:layout_height="@dimen/size_icon_food">
            <ImageView
                android:id="@+id/ivColorFood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_color"
                />
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_food"
            android:layout_gravity="center"/>
        <android.support.v7.widget.CardView
            android:layout_width="@dimen/size_icon_food"
            android:layout_marginEnd="@dimen/margin_big"
            android:layout_marginStart="@dimen/margin_big"
            app:cardCornerRadius="@dimen/round_corner"
            android:layout_height="@dimen/size_icon_food">
            <ImageView
                android:id="@+id/ivIconFood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_help_blue"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_big"
        android:paddingEnd="@dimen/padding_big"
        android:paddingTop="@dimen/padding_normal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color_menu_food"
            android:text="@string/titleStatus"/>
        <CheckBox
            android:id="@+id/cbStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_big"
            android:layout_marginEnd="@dimen/margin_normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_food"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/margin_big"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:background="@drawable/state_button"
            android:backgroundTint="@color/red"
            android:text="@string/delete"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_big"
            android:layout_marginBottom="@dimen/margin_normal"
            android:background="@drawable/state_button"
            android:text="@string/get"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>