<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/padding_big">
    <FrameLayout
        android:layout_width="match_parent"
        android:paddingStart="@dimen/padding_big"
        android:paddingEnd="@dimen/padding_big"
        android:paddingTop="@dimen/padding_big"
        android:paddingBottom="@dimen/padding_big"
        android:background="@color/main_color"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_price"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="start"/>
        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:layout_gravity="end"/>
    </FrameLayout>
    <EditText
        android:id="@+id/etPrice"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:minHeight="@dimen/size_icon_food"
        android:layout_width="match_parent"
        android:inputType="text"
        android:text="@string/default_price"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center_vertical|end"
        android:paddingEnd="@dimen/padding_normal"
        android:paddingStart="@dimen/padding_normal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="wrap_content"
        android:background="@drawable/border"/>
    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/done"
        android:background="@drawable/state_button"/>
</LinearLayout>
