<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color">

        <TextView
            android:id="@+id/tvTitleDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_big"
            android:text="@string/edit_unit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/ivCloseDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/margin_big"
            android:src="@drawable/ic_close" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center_vertical"
        android:minHeight="@dimen/heght_input_unit"
        android:paddingStart="@dimen/padding_big"
        android:paddingEnd="@dimen/padding_big" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_dialog"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding_big"
        android:paddingTop="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_big"
        android:paddingBottom="@dimen/padding_normal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_button"
            android:layout_marginEnd="@dimen/margin_big"
            android:background="@drawable/round_corner_red"
            android:text="@string/negative_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnGet"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_button"
            android:background="@drawable/state_button"
            android:text="@string/positive_button"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
