<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingStart="@dimen/margin_big"
    android:paddingTop="@dimen/margin_normal"
    android:paddingEnd="@dimen/margin_normal"
    android:paddingBottom="@dimen/margin_normal">
    <android.support.v7.widget.CardView
        android:layout_width="@dimen/size_icon_food"
        app:cardCornerRadius="@dimen/round_corner"
        android:layout_height="@dimen/size_icon_food">
        <vn.com.misa.cukcuklitever1.view_custom.CircleImageView
            android:id="@+id/ivIconFood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#765c52"
            android:src="@drawable/default_avatar"/>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNameFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="@dimen/margin_big"
            android:paddingEnd="@dimen/margin_big"
            android:text="@string/name_test"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_color_menu_food"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPriceFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_big"
                android:textColor="@color/text_color_menu_food"
                android:maxLines="1"
                android:text="@string/price_food"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvStatusFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:background="@drawable/round_corner_red"
                android:gravity="center"
                android:paddingStart="@dimen/margin_normal"
                android:paddingEnd="@dimen/margin_normal"
                android:text="@string/status_food"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="@dimen/size_arrow_edit"
        android:layout_height="@dimen/size_arrow_edit"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/margin_normal"
        android:src="@drawable/ic_forward"/>
</LinearLayout>
